Fixed contrast issue on the hero section

--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ nav ul {
 
 .hero {
   min-height: 90vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent),
+  background: linear-gradient(rgba(0, 0, 0, 0.7), transparent),
     url("./img/landing-page.jpg");
   background-size: cover;
   background-position: center;
